# Plonky3

./: Cargo.toml
baby-bear/benches/: extension.rs  inverse.rs
baby-bear/src/: baby_bear.rs
dft/src/: radix_2_dit_parallel.rs  util.rs
duo-stark/: Cargo.toml
duo-stark/src/: lib.rs  proof.rs  prover.rs  verifier.rs
field-testing/src/: bench_func.rs
field/src/extension/: binomial_extension.rs
goldilocks/benches/: extension.rs  inverse.rs
keccak-air/: Cargo.toml
keccak-air/benches/: keccak_air.rs
keccak-air/examples/: prove_baby_bear_keccak_duo.rs
keccak-air/src/: air.rs
ldt/src/: ldt_based_pcs.rs
matrix/src/: dense.rs  mul.rs
uni-stark/src/: check_constraints.rs  decompose.rs  lib.rs  prover.rs
