[workspace]
resolver = "2"
members = [
    "air",
    "baby-bear",
    "blake3",
    "brakedown",
    "challenger",
    "code",
    "commit",
    "dft",
    "duo-stark",
    "field",
    "field-testing",
    "fri",
    "goldilocks",
    "interpolation",
    "keccak",
    "keccak-air",
    "lde",
    "ldt",
    "matrix",
    "merkle-tree",
    "maybe-rayon",
    "mersenne-31",
    "monolith",
    "multi-stark",
    "poseidon",
    "poseidon2",
    "reed-solomon",
    "rescue",
    "symmetric",
    "tensor-pcs",
    "util",
    "uni-stark",
]

[profile.release]
codegen-units = 1
lto = "fat"
